--- a/Lucuber/ViewControllers/Profile/Profile.storyboard
+++ b/Lucuber/ViewControllers/Profile/Profile.storyboard
@@ -14,7 +14,7 @@
                 <navigationController id="HD5-iu-WB9" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="我" image="tabbar_setting" selectedImage="tabbar_setting_sele" id="Y6T-Sx-RfZ"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nfm-6Z-uBS">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="nfm-6Z-uBS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
