--- a/Lucuber/ViewControllers/EditMaster/EditMaster.storyboard
+++ b/Lucuber/ViewControllers/EditMaster/EditMaster.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3Vh-ll-f3k">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,10 +21,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SOw-Ii-suP">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="3Vh-ll-f3k" id="urA-yQ-8x9"/>
+                                    <outlet property="delegate" destination="3Vh-ll-f3k" id="YiR-H7-R7g"/>
+                                </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mi7-dQ-0uw">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mi7-dQ-0uw" customClass="BottomButtonView" customModule="Lucuber" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -36,17 +40,21 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="SOw-Ii-suP" secondAttribute="trailing" id="CeK-cj-svC"/>
                             <constraint firstItem="214-sb-0X4" firstAttribute="top" secondItem="SOw-Ii-suP" secondAttribute="bottom" id="Dwo-co-Ekr"/>
+                            <constraint firstItem="SOw-Ii-suP" firstAttribute="top" secondItem="TwO-eb-Qc6" secondAttribute="top" id="K1D-Yx-aFB"/>
                             <constraint firstItem="SOw-Ii-suP" firstAttribute="leading" secondItem="TwO-eb-Qc6" secondAttribute="leading" id="XCc-AK-H9l"/>
                             <constraint firstItem="Mi7-dQ-0uw" firstAttribute="leading" secondItem="TwO-eb-Qc6" secondAttribute="leading" id="bhc-52-JS6"/>
-                            <constraint firstItem="SOw-Ii-suP" firstAttribute="top" secondItem="Xbl-yB-jnj" secondAttribute="bottom" id="fsh-AW-4pI"/>
                             <constraint firstAttribute="trailing" secondItem="Mi7-dQ-0uw" secondAttribute="trailing" id="hRG-4C-HaJ"/>
                             <constraint firstItem="214-sb-0X4" firstAttribute="top" secondItem="Mi7-dQ-0uw" secondAttribute="bottom" id="lrL-aQ-Lvc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomButtonView" destination="Mi7-dQ-0uw" id="IZF-ap-tee"/>
+                        <outlet property="tableView" destination="SOw-Ii-suP" id="2De-Z0-qft"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tb3-TB-Q4U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="81" y="219"/>
+            <point key="canvasLocation" x="80.799999999999997" y="218.1409295352324"/>
         </scene>
     </scenes>
 </document>
